--- a/css/style.css
+++ b/css/style.css
@@ -1401,16 +1401,13 @@ td{text-align: center;}
 }
 /* image preview */
 .parent-img{
-    position: absolute;
-    top: 50px;
-    left: 50px;
+
 }
 .parent-img .fa-cloud-arrow-up{
     font-size: 25px;
 }
 .drop-box, .drop-boxData2 .text-center {
     display: inline-block;
-    margin: 5px 10px;
     float: right;
 }
 .drop-box {
@@ -1418,7 +1415,6 @@ td{text-align: center;}
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border: 1px dashed var(--color2);
 }
 .images-upload-block {
     display: inline-block;
@@ -1457,7 +1453,6 @@ td{text-align: center;}
     background: transparent;
     color: #6c757d;
     font-size: 25px;
-    margin: 20px 10px;
     display: inline-block;
     float: right;
     border-radius: 10px;
@@ -1825,6 +1820,7 @@ visibility: visible;
   }
   #selectedFilesCont{
     flex-wrap: wrap;
+    margin: 0 20px;
   }
 .uploadGreen{
     color: var(--color1);
@@ -1892,9 +1888,9 @@ visibility: visible;
   }
   
   .img-uploded {
-    max-height: 110px;
-    min-height: 100px;
-    width: 115px;
+    max-height: 90px;
+    min-height: 90px;
+    width: 95px;
     height: auto;
   }
   
@@ -1904,8 +1900,8 @@ visibility: visible;
   .remove-appendedd {
     position: absolute;
     color: #fff;
-    width: 19px;
-    height: 19px;
+    width: 12px;
+    height: 12px;
     padding: 6px;
     border-radius: 50%;
     background: crimson;
@@ -1921,7 +1917,7 @@ visibility: visible;
     font-size: 12px;
     z-index: 10;
     top: -8px;
-    right: -15px;
+    left: -15px;
     border: 2px solid #fff;
   }
   
@@ -2278,3 +2274,41 @@ visibility: visible;
     opacity: 1;
 }
 .singleQueryQuestion.active{ display: none; }
+
+
+
+
+/* new edits */
+.complainModal{
+    max-width: 800px;
+}
+.closeComplain{
+    font-size: 30px;
+}
+#complainHead{
+    position:absolute; right: 40%;
+}
+.complainModal .modal-header{border-bottom: none;}
+.complainModal .modal-body{
+    width: 70%;
+    margin: auto;
+}
+.compainData{color: gray;}
+
+.uploadCompain{
+    width: 90px;
+    height: 87px;
+    border: 1px dashed #41b4ba;
+    background-color: rgb(128 128 128 / 9%);
+    padding: 10px;
+    border-radius: 9px;
+    position: relative;
+}
+.uploadCompain svg{ font-size: 25px; color: #41b4ba; }
+
+.sendCompa{
+    width: 240px;
+    height: 50px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+}
